# routes/api.php
@@ -22,12 +22,12 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 //had to comment out ->prefix('api) from RouteServiceProvider class
 Route::prefix('/')->controller(SignalController::class)->group(function () {
-    Route::post('/register', 'register')->name('register');
-    // Route::post('/verify', 'verify')->name('verify');
-    Route::get('/unregister', 'unregister')->name('unregister');
     Route::get('/version', 'version')->name('version');
     Route::get('/receive', 'receive')->name('receive');
     Route::post('/sendmessage', 'sendmessage')->name('sendmessage');
     Route::post('/command', 'command')->name('command');
-    Route::post('/profilename', 'profilename')->name('profilename');
+    // Route::post('/register', 'register')->name('register');
+    // Route::post('/verify', 'verify')->name('verify');
+    // Route::get('/unregister', 'unregister')->name('unregister');
+    // Route::post('/profilename', 'profilename')->name('profilename');
 });
